--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section id="home" class="hero">
     <div class="container">
-      <h1>Güvenli ve Hızlı Taşımacılık</h1>
+      <h1>Farkı hissedin.</h1>
       <p>TruckersMP'de sanal taşımacılığın zirvesi</p>
       <a href="#contact" class="btn">Bize Katıl</a>
     </div>
@@ -47,7 +47,6 @@ Hedefimiz tüm üyelerimizin istediği tarzda keyif alarak ilerlemek.
 Daha fazla bilgi için discord adresimize katılabilir ve bizi diğer bağlantılarımızdan takip edebilirsiniz.
 
 
-
 *Who is Malkoçoğlu Logistics?*
 
 Malkoçoğlu Logistics was founded by Hakan Turan on 06.06.2021, and we joined you as VTC under the leadership of Batu on 05.06.2024.
@@ -56,23 +55,63 @@ Our aim is to become a quality company and provide better quality service, espec
 
 Our goal is to progress by having fun in the style that all our members want.
 
-For more information, you can join our discord address and follow us on our other links.</p>
+For more information, you can join our discord address and follow us on our other links.
+</p>
     </div>
   </section>
 
   <section id="team" class="section">
     <div class="container">
       <h2>Ekibimiz</h2>
-      <div class="team-grid">
-        <div class="team-member">
-          <img src="img/ceo.jpg" alt="Kurucu">
-          <h3>Yusuf Malkoçoğlu</h3>
-          <p>Kurucu / CEO</p>
+      <div class="team-category">
+        <h3>Yönetici Kadrosu</h3>
+        <div class="team-grid">
+          <div class="team-member">
+            <img src="img/batuhan.jpg" alt="Batuhan Ezber">
+            <h3>Batuhan Ezber</h3>
+            <p>Owner</p>
+          </div>
+          <div class="team-member">
+            <img src="img/hakan.jpg" alt="Hakan Turan">
+            <h3>Hakan Turan</h3>
+            <p>Owner</p>
+          </div>
+          <div class="team-member">
+            <img src="img/duran.jpg" alt="Duran Seviç">
+            <h3>Duran Seviç</h3>
+            <p>Founder</p>
+          </div>
+          <div class="team-member">
+            <img src="img/ismail.jpg" alt="İsmail Uçar">
+            <h3>İsmail Uçar</h3>
+            <p>Founder</p>
+          </div>
+          <div class="team-member">
+            <img src="img/utku.jpg" alt="Utku Özdemir">
+            <h3>Utku Özdemir</h3>
+            <p>CEO</p>
+          </div>
+          <div class="team-member">
+            <img src="img/berk.jpg" alt="Berk Bülbül">
+            <h3>Berk Bülbül</h3>
+            <p>Event Manager</p>
+          </div>
+          <div class="team-member">
+            <img src="img/cagan.jpg" alt="Çağan Çalışkam">
+            <h3>Çağan Çalışkan</h3>
+            <p>Event Manager</p>
+          </div>
         </div>
-        <div class="team-member">
-          <img src="img/media.jpg" alt="Medya Sorumlusu">
-          <h3>Ahmet K.</h3>
-          <p>Medya Sorumlusu</p>
+      </div>
+
+      <div class="team-category">
+        <h3>Media Team</h3>
+        <div class="team-grid">
+          <div class="team-member">
+            <img src="img/enes.jpg" alt="Enes Bakıray">
+            <h3>Enes Bakiray</h3>
+            <p>Media Team</p>
+          </div>
         </div>
       </div>
     </div>
@@ -82,9 +121,9 @@ For more information, you can join our discord address and follow us on our oth
     <div class="container">
       <h2>Galeri</h2>
       <div class="gallery-grid">
-        <img src="img/convoy1.jpg" alt="Konvoy 1">
-        <img src="img/convoy2.jpg" alt="Konvoy 2">
-        <img src="img/truck1.jpg" alt="Tır 1">
+        <img src="img/convoy1.jpg" alt=" ">
+        <img src="img/convoy2.jpg" alt=" ">
+        <img src="img/truck1.jpg" alt=" ">
       </div>
     </div>
   </section>
@@ -93,7 +132,7 @@ For more information, you can join our discord address and follow us on our oth
     <div class="container">
       <h2>İletişim</h2>
       <p>Sunucumuza katılarak ekibimize ulaşabilirsiniz:</p>
-      <a href="https://discord.gg/örneklink" target="_blank" class="btn discord">Discord'a Katıl</a>
+      <a href="https://discord.gg/4hj3WjAbR6" target="_blank" class="btn discord">Discord'a Katıl</a>
     </div>
   </section>
 
