--- a/index.html
+++ b/index.html
@@ -3,25 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malkoçoğlu Logistics | Profesyonel VTC</title>
+  <title>Malkoçoğlu Logistics | Ana Sayfa</title>
   <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <header class="navbar">
-    <div class="container nav-container">
+    <div class="container">
       <div class="logo">Malkoçoğlu Logistics</div>
-      <nav class="nav-links" id="navMenu">
+      <nav class="nav-links">
         <a href="#home">Anasayfa</a>
         <a href="#about">Hakkımızda</a>
         <a href="#team">Ekibimiz</a>
         <a href="#gallery">Galeri</a>
         <a href="#contact">İletişim</a>
       </nav>
-      <button class="menu-toggle" id="menuToggle">☰</button>
     </div>
   </header>
 
@@ -36,7 +33,7 @@
   <section id="about" class="section">
     <div class="container">
       <h2>Hakkımızda</h2>
-      <p>*Malkoçoğlu Logistics Kimdir?*
+      <p>*Malkoçoğlu Logistics Kimdir*
 
 Malkoçoğlu Logistics Hakan Turan tarafından 06.06.2021 tarihinde kurulmuş olup 05.06.2024 tarihinde Batu'nun önderliğinde VTC olarak aranıza katılmış bulunmaktayız.
 
@@ -63,57 +60,27 @@ For more information, you can join our discord address and follow us on our oth
   <section id="team" class="section">
     <div class="container">
       <h2>Ekibimiz</h2>
+
       <div class="team-category">
         <h3>Yönetici Kadrosu</h3>
         <div class="team-grid">
-          <div class="team-member">
-            <img src="img/batuhan.jpg" alt="Batuhan Ezber">
-            <h3>Batuhan Ezber</h3>
-            <p>Owner</p>
-          </div>
-          <div class="team-member">
-            <img src="img/hakan.jpg" alt="Hakan Turan">
-            <h3>Hakan Turan</h3>
-            <p>Owner</p>
-          </div>
-          <div class="team-member">
-            <img src="img/duran.jpg" alt="Duran Seviç">
-            <h3>Duran Seviç</h3>
-            <p>Founder</p>
-          </div>
-          <div class="team-member">
-            <img src="img/ismail.jpg" alt="İsmail Uçar">
-            <h3>İsmail Uçar</h3>
-            <p>Founder</p>
-          </div>
-          <div class="team-member">
-            <img src="img/utku.jpg" alt="Utku Özdemir">
-            <h3>Utku Özdemir</h3>
-            <p>CEO</p>
-          </div>
-          <div class="team-member">
-            <img src="img/berk.jpg" alt="Berk Bülbül">
-            <h3>Berk Bülbül</h3>
-            <p>Event Manager</p>
-          </div>
-          <div class="team-member">
-            <img src="img/cagan.jpg" alt="Çağan Çalışkam">
-            <h3>Çağan Çalışkan</h3>
-            <p>Event Manager</p>
-          </div>
+          <div class="Batuhan Ezber"><img src="img/batuhan.jpg" alt=""><h3>Batuhan Ezber</h3><p>Owner</p></div>
+          <div class="Hakan Turan"><img src="img/hakan.jpg" alt=""><h3>Hakan Turan</h3><p>Owner</p></div>
+          <div class="Duran Seviç"><img src="img/duran.jpg" alt=""><h3>Duran Seviç</h3><p>Founder</p></div>
+          <div class="İsmail Uçar"><img src="img/ismail.jpg" alt=""><h3>İsmail Uçar</h3><p>Founder</p></div>
+          <div class="Utku Özdemir"><img src="img/utku.jpg" alt=""><h3>Utku Özdemir</h3><p>CEO</p></div>
+          <div class="Berk bülbül"><img src="img/berk.jpg" alt=""><h3>Berk Bülbül</h3><p>Event Manager</p></div>
+          <div class="Çağan Çalışkan"><img src="img/cagan.jpg" alt=""><h3>Çağan Çalışkan</h3><p>Event Manager</p></div>
         </div>
       </div>
 
       <div class="team-category">
         <h3>Media Team</h3>
         <div class="team-grid">
-          <div class="team-member">
-            <img src="img/enes.jpg" alt="Enes Bakıray">
-            <h3>Enes Bakiray</h3>
-            <p>Media Team</p>
-          </div>
+          <div class="Enes Bakiray"><img src="img/.jpg" alt=""><h3>Enes Bakiray</h3><p>Media Team</p></div>
         </div>
       </div>
+
     </div>
   </section>
 
@@ -132,7 +99,7 @@ For more information, you can join our discord address and follow us on our oth
     <div class="container">
       <h2>İletişim</h2>
       <p>Sunucumuza katılarak ekibimize ulaşabilirsiniz:</p>
-      <a href="https://discord.gg/4hj3WjAbR6" target="_blank" class="btn discord">Discord'a Katıl</a>
+      <a href="https://discord.gg/örneklink" target="_blank" class="btn discord">Discord'a Katıl</a>
     </div>
   </section>
 
@@ -141,5 +108,7 @@ For more information, you can join our discord address and follow us on our oth
       <p>&copy; 2025 Malkoçoğlu Logistics. Tüm hakları saklıdır.</p>
     </div>
   </footer>
+
 </body>
 </html>
+
