--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ For more information, you can join our discord address and follow us on our oth
         <h3>Yönetici Kadrosu</h3>
         <div class="team-grid">
           <div class="Batuhan Ezber"><img src="img/batuhan.jpg" alt=""><h3>Batuhan Ezber</h3><p>Owner</p></div>
-          <div class="Hakan Turan"><img src="img/hakan.jpg" alt=""><h3>Hakan Turan</h3><p>Owner</p></div>
+          <div class="Hakan Turan"><img src="img/hakan.jpg" alt=""><h3>Hakan Turan</h3><p>Founder</p></div>
           <div class="Duran Seviç"><img src="img/duran.jpg" alt=""><h3>Duran Seviç</h3><p>Founder</p></div>
           <div class="İsmail Uçar"><img src="img/ismail.jpg" alt=""><h3>İsmail Uçar</h3><p>Founder</p></div>
           <div class="Utku Özdemir"><img src="img/utku.jpg" alt=""><h3>Utku Özdemir</h3><p>CEO</p></div>
@@ -99,7 +99,7 @@ For more information, you can join our discord address and follow us on our oth
     <div class="container">
       <h2>İletişim</h2>
       <p>Sunucumuza katılarak ekibimize ulaşabilirsiniz:</p>
-      <a href="https://discord.gg/örneklink" target="_blank" class="btn discord">Discord'a Katıl</a>
+      <a href="http://discord.gg/4hj3WjAbR6" target="_blank" class="btn discord">Discord'a Katıl</a>
     </div>
   </section>
 
